# HwTextEngine

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
docs/: DESIGN.md  submission.md
examples/: answer.md  textbook.txt
examples/notices/: week6_room_change.txt  week6_shusuan.txt
src/hwtext/: __init__.py  __main__.py  cli.py
src/hwtext/apps/: __init__.py  analyze.py  fix_answer.py  locate_problem.py  mine_homework.py
src/hwtext/compress/: __init__.py  heap.py  huffman.py
src/hwtext/io/: __init__.py  notices.py  pdf_text.py
src/hwtext/matching/: __init__.py  aho_corasick.py  edit_distance.py  kmp.py
src/hwtext/parsing/: __init__.py  bracket_stack.py  delim_fix.py  md_parser.py  tokenizer.py
tests/: test_aho_corasick.py  test_apps.py  test_bracket_stack.py  test_delim_fix.py  test_edit_distance.py  test_heap.py  test_huffman.py  test_kmp.py  test_md_parser.py
